--- a/src/components/bookmarks/index.less
+++ b/src/components/bookmarks/index.less
@@ -22,6 +22,11 @@
       pointer-events: none;
     }
   }
+  .close-panel {
+    * {
+      pointer-events: none;
+    }
+  }
   .bookmark-mask-dark {
     z-index: 998;
     background-color: rgba(0, 0, 0, .6);
