date picker icon configuration, table sorting fix

--- a/src/components/current-selections/index.less
+++ b/src/components/current-selections/index.less
@@ -20,11 +20,13 @@
       background-color: #f2f2f2;
     }
     svg {
-      pointer-events: none;
       width: 20px;
       height: 20px;
       position: relative;
       top: 10px;
+    }
+    * {
+      pointer-events: none;
     }
   }
   .clear-all {
