--- a/src/components/bookmarks/index.less
+++ b/src/components/bookmarks/index.less
@@ -1,4 +1,12 @@
 .websy-bookmark {
+  .websy-bookmark-search {
+    padding: 0 1rem .5rem;
+    margin: 2px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
   .bookmarkBtn {
     cursor: pointer;
     text-align: center;
@@ -222,14 +230,11 @@
   }
   .search-input {
     width: 100%;
-    padding: 9px 20px 12px 40px;
+    padding: 12px 20px 12px 15px;
     border: none;
     margin-left: 5px;
-    + svg {
-      position: absolute;
-      top: 6px;
-      left: 15px;
-      height: 22px;
+    + * {
+      margin-right: 5px;
     }
   }
   .close {
