table pivot options

--- a/src/websy-designs-qlik-plugin.less
+++ b/src/websy-designs-qlik-plugin.less
@@ -1,2 +1,3 @@
 @import url(./components/bookmarks/index.less);
 @import url(./components/current-selections/index.less);
+@import url(./components/table3/index.less);
