--- a/src/components/table3/index.less
+++ b/src/components/table3/index.less
@@ -1,17 +1,79 @@
+.pivot-button-container {
+  display: flex;
+  justify-content: end;
+  position: relative;
+  z-index: 2;
+  button {
+    height: 30px;
+    line-height: 30px;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    padding: 0 15px;
+    * {
+      pointer-events: none;
+    }
+    cursor: pointer;
+    &.active {
+      background-color: #cccccc;
+      color: #ffffff;
+    }
+  }
+}
 .websy-designs-pivot-container {
   height: 100px;
   display: flex;
   padding-bottom: 10px;
   box-sizing: border-box;
+  h3 {
+    display: none;
+  }
   > div {
-    flex-grow: 1;
-    padding: 0 3px;
-    height: 100px;
+    > div {
+      flex-grow: 1;
+      padding: 0 3px;
+      height: 100px;
+    }
     &:first-of-type {
       border-right: 1px solid #cccccc;
     }
     .websy-drag-drop-container {
       align-items: end;
+    }
+  }
+  &.floating {
+    position: absolute;
+    top: -200px;
+    left: 0;
+    transition: .2s all ease-in;
+    background-color: #fafafa;
+    z-index: 1;
+    width: 100%;
+    height: 200px;
+    box-shadow: 0 0 3px #cccccc;
+    padding: 10px;
+    padding-top: 40px;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+    &.active {
+      top: 0;
+    }
+    h3 {
+      display: block;
+      padding-left: 10px;
+      margin-bottom: 5px;
+    }
+    > div {
+      max-width: 50%;
+      &:first-of-type {
+        width: 50%!important;
+        flex-grow: 1;
+      }
+      &:last-of-type {
+        flex-grow: 1;
+      }
+      .websy-drag-drop-container {
+        align-items: start;
+      }
     }
   }
 }
