add subtitle option to table

--- a/src/components/table3/index.less
+++ b/src/components/table3/index.less
@@ -180,6 +180,10 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+.websy-table-subtitle {
+  font-weight: bold;
+  font-size: .7rem;
+}
 
 .websy-dropdown-custom-button {
   padding: 0;
